Grandes lignes ok. Manque contraintes et sécu, gestion users, mails, textes et liens boutons

--- a/templates/adminArticle.html.twig
+++ b/templates/adminArticle.html.twig
@@ -3,10 +3,14 @@
 {#----------------------------- Page formulaire d'ajout d'un organisme ---------------------------#}
 
 
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block content %}
 
+
+    <div class="yellowBlock">
+        <h1 style="padding-top:20px;margin-top:0;">Gestion des articles</h1>
+    </div>
 
     <div class = "whiteBlock" style="padding-top:70px;">
     <div class="articleAdmin container col-lg-8 col-lg-offset-2">
